[package]
name = "rooper"
version = "0.1.0"
authors = ["yehuohan@gmail.com"]
edition = "2018"
description = "A simple looper in rust."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[features]
#default = ["debug"]
debug = []
