[package]
name = "procmacro"
version = "0.1.0"
authors = ["lrx"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = "0.6.13"

[dependencies.syn]
version = "0.15.44"
features = ["full"] # syn使用full feature
